--- a/naive_b.ipynb
+++ b/naive_b.ipynb
@@ -422,169 +422,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "193aacd9-e902-451c-ba05-46b73fb8bcf1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Quang cảnh</th>\n",
-       "      <th>Nhiệt độ</th>\n",
-       "      <th>Độ ẩm</th>\n",
-       "      <th>Gió</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Quang cảnh  Nhiệt độ  Độ ẩm  Gió\n",
-       "0          1.0       1.0    0.0  1.0\n",
-       "1          1.0       1.0    0.0  0.0\n",
-       "2          2.0       1.0    0.0  1.0\n",
-       "3          0.0       2.0    0.0  1.0\n",
-       "4          0.0       0.0    1.0  1.0\n",
-       "5          0.0       0.0    1.0  0.0\n",
-       "6          2.0       0.0    1.0  0.0\n",
-       "7          1.0       2.0    0.0  1.0\n",
-       "8          1.0       0.0    1.0  1.0\n",
-       "9          0.0       2.0    1.0  1.0\n",
-       "10         1.0       2.0    1.0  0.0\n",
-       "11         2.0       2.0    0.0  0.0\n",
-       "12         2.0       1.0    1.0  1.0\n",
-       "13         0.0       2.0    0.0  0.0"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "c6a6a9c4-85aa-40af-9738-cc31cd7f0d2c",
    "metadata": {},
@@ -830,56 +667,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "790d9e23-ccfa-4ee7-afdc-c653a768ce53",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.6428571428571429, 0.35714285714285715]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(cal_prior(df,y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "5d8d43b4-35f6-4047-b557-198e5712191f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "2.0\n",
-      "0.0\n",
-      "0.0\n",
-      "0.0\n",
-      "2.0\n",
-      "0.0\n",
-      "2.0\n",
-      "2.0\n",
-      "2.0\n",
-      "1.0\n",
-      "2.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in np.array(X):\n",
-    "    print(x[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "id": "3965df60-8a91-46c1-9826-31f55f10f656",
    "metadata": {},
@@ -895,12 +682,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "10fd1537-361e-45d6-8ad3-252062fc0dff",
    "metadata": {},
    "outputs": [],
    "source": [
     "def naive_bayes_gaussian(df, X, y):\n",
+    "    \"\"\"Calculate P(X=x1|Y=y)P(X=x2|Y=y)...P(X=xn|Y=y) * P(Y=y) \n",
+    "    for all y and find the maximum\"\"\"\n",
     "    features = list(X.columns)\n",
     "    prior = cal_prior(df,y)\n",
     "    y_preds = []\n",
@@ -910,20 +699,41 @@
     "        for i in range(len(labels)):\n",
     "            for j in range(len(features)):\n",
     "                likelihood[i] *= cal_likelihood_gaussian(df, features[j], x[j], y, labels[i])\n",
-    "                # print(likelihood[i])\n",
     "        post_prob = [1]*len(labels)\n",
     "        for i in range(len(labels)):\n",
     "            post_prob[i] = likelihood[i]*prior[i]\n",
+    "        print(post_prob)\n",
     "        y_preds.append(np.argmax(post_prob))\n",
     "    return y_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "c26dc3c3-c239-4b12-8d50-3abe7774697b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.024545939914561037, 0.029790002965039197]\n",
+      "[0.012602305754881034, 0.04157529828136013]\n",
+      "[0.01562595880212199, 0.0014831569142992778]\n",
+      "[0.007684890571990846, 0.013905272772414153]\n",
+      "[0.011563554379488557, 0.0017521428646211314]\n",
+      "[0.005936926775293726, 0.002445312352391184]\n",
+      "[0.007684890571990847, 0.00016990874156188712]\n",
+      "[0.01562595880212199, 0.019406371455392486]\n",
+      "[0.023512582599230898, 0.0024453123523911838]\n",
+      "[0.014968122968846712, 0.003102685740616372]\n",
+      "[0.015625958802121993, 0.006043206635693443]\n",
+      "[0.005107213678886668, 0.0013484216644323332]\n",
+      "[0.03043521188301095, 0.000330937039812849]\n",
+      "[0.0039455543775522685, 0.019406371455392483]\n"
+     ]
+    }
+   ],
    "source": [
     "Y_pred = naive_bayes_gaussian(df, X, y)"
    ]
@@ -973,74 +783,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "639b478b-24e6-45be-82d4-3b9d256500b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     Không\n",
-       "1     Không\n",
-       "2        Có\n",
-       "3        Có\n",
-       "4        Có\n",
-       "5     Không\n",
-       "6        Có\n",
-       "7     Không\n",
-       "8        Có\n",
-       "9        Có\n",
-       "10       Có\n",
-       "11       Có\n",
-       "12       Có\n",
-       "13    Không\n",
-       "Name: Chơi, dtype: object"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "f5ac72d2-e15a-45ed-bd8d-85a63ad18f69",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.0, 1.0, 0.0, 1.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(sklearn_preds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "6dcd946f-1cc9-4391-b85b-e619a85464db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sklearn_preds = ordinal_encoder.fit_transform(sklearn_preds.reshape(-1, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "cd5c4e6b-337f-4cec-bad9-f34875116959",
+   "id": "3b94722e-8043-4500-b613-b76e74e8b35f",
    "metadata": {},
    "outputs": [],
    "source": []
