Update 'open in colab'

--- a/naive_b.ipynb
+++ b/naive_b.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f1accd6c-9f6b-4bdd-8e0c-fb648732e9de",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/WhoIsLTD/naive_bayes/blob/master/naive_b.ipynb)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ef84c4d0-d9b7-49c2-8ad4-6bda8f6e995e",
@@ -785,6 +794,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b94722e-8043-4500-b613-b76e74e8b35f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429fd0b2-231a-4670-ab87-cfdb3d1a4eab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d15c791c-30d1-478f-b389-393788080730",
    "metadata": {},
    "outputs": [],
    "source": []
