Update "Open in SageMaker"

--- a/naive_b.ipynb
+++ b/naive_b.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/WhoIsLTD/naive_bayes/blob/master/naive_b.ipynb)\n",
-    "\n"
+    "\n",
+    "[![Open In SageMaker](https://studiolab.sagemaker.aws/studiolab.svg)](https://xq9oi4qbokwqtbl.studio.us-east-2.sagemaker.aws/studiolab/default/jupyter/lab/tree/naive_bayes/naive_b.ipynb)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ef84c4d0-d9b7-49c2-8ad4-6bda8f6e995e",
    "metadata": {},
    "outputs": [],
@@ -208,6 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#X là thuộc tính độc lập, y là thuộc tính phụ thuộc\n",
     "X = df.drop(['Chơi'], axis=1)\n",
     "y = df.Chơi"
    ]
@@ -417,47 +419,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Sử dụng OrdinalEncoder convert dữ liệu sang dạng số\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
-    "# Cols need to use ordinal encoder\n",
     "cols = X.columns\n",
     "\n",
-    "# Apply ordinal encoder to each column in cols\n",
     "ordinal_encoder = OrdinalEncoder()\n",
     "X[cols] = ordinal_encoder.fit_transform(X[cols])\n",
     "y = ordinal_encoder.fit_transform(np.array(y).reshape(-1, 1))\n",
     "df[list(df.columns)] = ordinal_encoder.fit_transform(df[list(df.columns)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6a6a9c4-85aa-40af-9738-cc31cd7f0d2c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "predictions: [1. 1. 0. 1. 0. 0. 0. 1. 0. 0. 0. 0. 0. 1.]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/studio-lab-user/.conda/envs/default/lib/python3.9/site-packages/sklearn/utils/validation.py:985: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "nb = GaussianNB()\n",
-    "nb.fit(X, y)\n",
-    "sklearn_preds = nb.predict(X)\n",
-    "\n",
-    "# print(f\"sklearn accuracy:{accuracy_score(y, sklearn_preds)}\")\n",
-    "print(f\"predictions: {sklearn_preds}\")"
    ]
   },
   {
@@ -636,6 +606,37 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6a6a9c4-85aa-40af-9738-cc31cd7f0d2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions: [1. 1. 0. 1. 0. 0. 0. 1. 0. 0. 0. 0. 0. 1.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/studio-lab-user/.conda/envs/default/lib/python3.9/site-packages/sklearn/utils/validation.py:985: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb = GaussianNB()\n",
+    "nb.fit(X, y)\n",
+    "sklearn_preds = nb.predict(X)\n",
+    "\n",
+    "# print(f\"sklearn accuracy:{accuracy_score(y, sklearn_preds)}\")\n",
+    "print(f\"predictions: {sklearn_preds}\")"
    ]
   },
   {
